--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime NL/Survival of the Dead</a></p>
 <p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime DE/Survival of the Dead</a></p>
 <p><a href="https://www.horizon.tv/en_ch/my-prime.html">My prime CH</a></p>
+<p><a href="https://www.horizon.tv/en_ch.html">Live channel CH</a></p>
+
 
   
 <h3>
