--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 <p><a href="https://www.horizon.tv/nl_nl/ondemand.html">On demand NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime NL/Survival of the Dead</a></p>
 <p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime DE/Survival of the Dead</a></p>
+<p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000345210/joy/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000345210/joy.html">VOD item NL</a></p>
+
 <p><a href="https://www.horizon.tv/en_ch/my-prime.html">My prime CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/541614119263/watch">Live channel CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F120673537/mein-idol-messi/crid%3A~~2F~~2Fbds.tv~~2F120673537-imi%3A0010000000BE0917/mein-idol-messi.html">Replay CH</a></p>
