--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <p><a href="hgo://nl/home">Home-NL</a></p>
 <p><a href="hgo://ch/home">Home-CH</a></p>    
 <p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">My prime item-CH</a></p>
+<p><a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">Maxdome item DE</a></p>        
 <p><a href="hgo://nl">without Home</a></p>    
 
 <p><h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking</h3></p>
@@ -105,6 +106,7 @@
 <p><a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/541614119263/watch">Live channel CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F120673537/mein-idol-messi/crid%3A~~2F~~2Fbds.tv~~2F120673537-imi%3A0010000000BE0917/mein-idol-messi.html">Replay CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000369333/nightcrawler-jede-nacht-hat-ihren-preis-hd/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000369333/nightcrawler-jede-nacht-hat-ihren-preis-hd.html">VOD item CH</a></p>
+<p><a href="https://www.horizon.tv/de_de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord.html">Maxdome item DE</a></p>
 
 
   
