--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 <p><a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/ondemand.html">On demand NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943149/watch">Live channel NL</a></p>
+<p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F144523905/wnl-opiniemakers/crid%3A~~2F~~2Fbds.tv~~2F227612161-imi%3A00100000007C921C/wnl-opiniemakers.html">Replay NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime NL/Survival of the Dead</a></p>
 <p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime DE/Survival of the Dead</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000345210/joy/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000345210/joy.html">VOD item NL</a></p>
