--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
 <p><a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">Maxdome item DE</a></p>        
 <p><a href="hgo://nl">without Home</a></p>    
 
-<p><h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking</h3></p>
+<p><h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking. Universal format</h3></p>
 <p>
 <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Items: VOD and linear</h4>
 </p>
 
-
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379031">Show/my-prime/season/episode</a><br>
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">Show/my-prime/season</a><br>
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">Show/my-prime</a><br>
+  
+  
+  
+  
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/watch</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html">Movie-{my-prime}/{type}/{mediagroup}</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/{name}/watch</a><br>
