--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to List of useful links Pages.</h3>
 
 <p></p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages. Mobile deeplinking: hgo</h3>
-<p><a href="hgo://nl/home">Home-NL</a></p>
-<p><a href="hgo://ch/home">Home-CH</a></p>    
-<p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">My prime item-CH</a></p>
-<p><a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">Maxdome item DE</a></p>        
-<p><a href="hgo://nl">without Home</a></p>    
-
-<p><h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking. Universal format</h3></p>
+<h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile deeplinking: hgo</h2>
+<a href="hgo://nl/home">hgo://nl/ Home-NL</a>
+<a href="hgo://ch/home">hgo://ch/ Home-CH</a>   
+<a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">hgo://ch/ My prime item-CH</a>
+<a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">hgo://de/ Maxdome item DE</a>
+<a href="hgo://nl">hgo://nl without Home</a>  
+        
 <p>
 <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Items: VOD and linear</h4>
+  <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Items: VOD and linear</h4>
 </p>
 
-<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379031">Show/my-prime/season/episode</a><br>
-<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">Show/my-prime/season</a><br>
-<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">Show/my-prime</a><br>
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379031">https://www.horizon.tv/dl/nl/ Show/my-prime/season/episode</a><br>
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl/ Show/my-prime/season</a><br>
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl/ Show/my-prime</a><br>
+
+<p><h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking. Universal format</h2></p>
+
   
   
   
