--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to List of useful links Pages.</h3>
 
 <p></p>
-<h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile deeplinking: hgo</h2>
-<a href="hgo://nl/home">hgo://nl/ Home-NL</a>
-<a href="hgo://ch/home">hgo://ch/ Home-CH</a>   
-<a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">hgo://ch/ My prime item-CH</a>
-<a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">hgo://de/ Maxdome item DE</a>
-<a href="hgo://nl">hgo://nl without Home</a>  
+<h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile deeplinking: hgo</h2></p>
+<p><a href="hgo://nl/home">hgo://nl/ Home-NL</a></p>
+<p><a href="hgo://ch/home">hgo://ch/ Home-CH</a> </p>  
+<p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">hgo://ch/ My prime item-CH</a></p>
+<p><a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">hgo://de/ Maxdome item DE</a></p>
+<p><a href="hgo://nl">hgo://nl without Home</a>  </p>
         
 <p>
 <h4>
