--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to List of useful links Pages.</h3>
 
 <p></p>
-<h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile deeplinking: hgo</h2></p>
+<h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile deeplinking: hgo://nl/, https://www.horizon.tv/dl/nl/</h2></p>
 <p><a href="hgo://nl/home">hgo://nl/ Home-NL</a></p>
 <p><a href="hgo://nl/my-prime">hgo://nl/ my-prime-NL</a></p>
 
