--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to List of useful links Pages.</h3>
 
 <p></p>
-<h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile deeplinking: hgo://nl/, https://www.horizon.tv/dl/nl/</h2></p>
+<h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Mobile deeplinking: hgo://nl/, https://www.horizon.tv/dl/nl/</h2></p>
 <p><a href="hgo://nl/home">hgo://nl/ Home-NL</a></p>
 <p><a href="hgo://nl/my-prime">hgo://nl/ my-prime-NL</a></p>
 
@@ -49,7 +49,7 @@
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl/ Show/my-prime/season</a><br>
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl/ Show/my-prime</a><br>
 
-<p><h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking. Universal format</h2></p>
+<p><h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Deeplinking. Universal format</h2></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/ondemand.html">On demand NL</a></p>
@@ -106,7 +106,7 @@
 
 <p>
    <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Different countries. Universal format</h4></p>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Different countries. Universal format</h4></p>
 
 
 
@@ -121,9 +121,9 @@
 
   
 <h2>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BRANDED app</h2>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo</h2>
 <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile Deeplinking. BRANDED app</h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Mobile Deeplinking</h4>
 
 <p>
    <a href="ziggogo://nl/home">ziggogo://nl/ Home Page NL</a><br>
@@ -139,13 +139,13 @@
 </p>
 <p>
   <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wrong pages</h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Wrong pages</h4>
   <a href="ziggogo://nl/hame">Hame Page-incorrect adress</a><br>
   <a href="ziggogo://nl/fjg">fjg Page-incorrect adress</a><br>
 </p>
 
 <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking. Universal format. BRANDED app</h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Deeplinking. Universal format</h4>
 
 
 
