--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Mobile deeplinking: hgo://nl/, https://www.horizon.tv/dl/nl/</h2></p>
 <p><a href="hgo://nl/home">hgo://nl/ Home-NL</a></p>
 <p><a href="hgo://nl/my-prime">hgo://nl/ my-prime-NL</a></p>
+<p><a href="hgo://nl/ondemand">hgo://nl/ on demand-NL</a></p>
 
 <p><a href="hgo://ch/home">hgo://ch/ Home-CH</a> </p>  
 
