--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 <p><a href="hgo://nl/home">hgo://nl/ Home-NL</a></p>
 <p><a href="hgo://nl/my-prime">hgo://nl/ my-prime-NL</a></p>
 <p><a href="hgo://nl/ondemand">hgo://nl/ on demand-NL</a></p>
-
+<p><a href="hgo://nl/tv-gids">hgo://nl/ tv-gids-NL</a></p>
+<p><a href="hgo://nl/my-videos">hgo://nl/ my-videos-NL</a></p>    
+<p><a href="hgo://nl/tv-kijken">hgo://nl/ tv-kijken-NL</a></p>      
+   
 <p><a href="hgo://ch/home">hgo://ch/ Home-CH</a> </p>  
 
 <p><a href="hgo://nl">hgo://nl without Home</a>  </p>
