--- a/index.html
+++ b/index.html
@@ -115,16 +115,13 @@
    <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Different countries. Universal format</h4></p>
 
-
-
-<p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">https://www.horizon.tv/de_de/ My prime DE/Survival of the Dead</a></p>
-
 <p><a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ My prime CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/541614119263/watch">https://www.horizon.tv/en_ch/ Live channel CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F120673537/mein-idol-messi/crid%3A~~2F~~2Fbds.tv~~2F120673537-imi%3A0010000000BE0917/mein-idol-messi.html">https://www.horizon.tv/en_ch/ Replay CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000369333/nightcrawler-jede-nacht-hat-ihren-preis-hd/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000369333/nightcrawler-jede-nacht-hat-ihren-preis-hd.html">https://www.horizon.tv/en_ch/ VOD item CH</a></p>
 <p><a href="https://www.horizon.tv/de_de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord.html">https://www.horizon.tv/de_de/ Maxdome item DE</a></p>
-
+<p><a href="https://www.horizon.tv/de_de/maxdome/movie-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral.html">https://www.horizon.tv/de_de/ Maxdome item-2 DE</a></p>
+<p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">https://www.horizon.tv/de_de/ My prime DE/Survival of the Dead</a></p>
 
   
 <h2>
