--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
 <p></p>
 <h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Mobile deeplinking: hgo://nl/, https://www.horizon.tv/dl/nl/</h2></p>
 <p><a href="hgo://nl/home">hgo://nl/ Home-NL</a></p>
-<p><a href="hgo://nl/my-prime">hgo://nl/ my-prime-NL</a></p>
+<p><a href="hgo://nl/myprime">hgo://nl/ my-prime-NL</a></p>
 <p><a href="hgo://nl/ondemand">hgo://nl/ on demand-NL</a></p>
-<p><a href="hgo://nl/tv-gids">hgo://nl/ tv-gids-NL</a></p>
-<p><a href="hgo://nl/my-videos">hgo://nl/ my-videos-NL</a></p>    
-<p><a href="hgo://nl/tv-kijken">hgo://nl/ tv-kijken-NL</a></p>     
-<p><a href="hgo://nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd">hgo://nl/ my prime movie-NL</a></p>         
+<p><a href="hgo://nl/tvguid">hgo://nl/ tv-gids-NL</a></p>
+<p><a href="hgo://nl/myvideos">hgo://nl/ my-videos-NL</a></p>    
+<p><a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL</a></p>     
+<p><a href="hgo://nl/myprime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd">hgo://nl/ my prime movie-NL</a></p>         
 <p><a href="https://www.horizon.tv/dl/nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd">https://www.horizon.tv/dl/nl// my prime movie-NL</a></p>               
-<p><a href="https://www.horizon.tv/dl/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/drop-dead-diva/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379026/drop-dead-diva">https://www.horizon.tv/dl/nl// my prime series-5season-NL</a></p>  
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379026">https://www.horizon.tv/dl/nl// my prime series-5season-shared-NL</a></p>       
       
 <p><a href="hgo://ch/home">hgo://ch/ Home-CH</a> </p>  
