--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p><a href="hgo://nl/home">hgo://nl/ Home-NL</a></p>
 <p><a href="hgo://nl/myprime">hgo://nl/ my-prime-NL</a></p>
 <p><a href="hgo://nl/ondemand">hgo://nl/ on demand-NL</a></p>
-<p><a href="hgo://nl/tvguid">hgo://nl/ tv-gids-NL</a></p>
+<p><a href="hgo://nl/tvguide">hgo://nl/ tv-gids-NL</a></p>
 <p><a href="hgo://nl/myvideos">hgo://nl/ my-videos-NL</a></p>    
 <p><a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL</a></p>     
 <p><a href="hgo://nl/myprime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd">hgo://nl/ my prime movie-NL</a></p>         
