--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 <p><a href="hgo://nl/tvguide">hgo://nl/ tv-gids-NL</a></p>
 <p><a href="hgo://nl/myvideos">hgo://nl/ my-videos-NL</a></p>    
 <p><a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL</a></p>     
-<p><a href="hgo://nl/myprime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd">hgo://nl/ my prime movie-NL</a></p>         
+
 <p><a href="https://www.horizon.tv/dl/nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000369510/ontmaagding-van-eva-van-end-de-hd">https://www.horizon.tv/dl/nl// my prime movie-NL</a></p>               
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379026">https://www.horizon.tv/dl/nl// my prime series-5season-shared-NL</a></p>       
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl// my prime series-5season-w/o episode-shared-NL</a></p> 
+<p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl// my prime series-5season-w/o episode-w/o season-shared-NL</a></p>       
       
 <p><a href="hgo://ch/home">hgo://ch/ Home-CH</a> </p>  
 
