--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <h4>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Items: VOD and linear</h4>
 </p>
+    
 <p><a href="hgo://nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000509232/101-dalmatians-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000509232/101-dalmatians-hd">hgo://nl/ my-prime item-NL</a></p>   
 <p><a href="hgo://nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000079C0/NOS%20Journaal/crid%3A~~2F~~2Fbds.tv~~2F227675996-imi%3A00100000007CCBC2/NOS%20Journaal">hgo://nl/ replay item-NL</a></p>
 <p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">hgo://ch/ My prime item-CH</a></p>
@@ -62,6 +63,10 @@
 
 <p><a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/ondemand.html">On demand NL</a></p>
+<p><a href="https://www.horizon.tv/nl_nl/tv-gids.html">tv-gids NL</a></p>
+<p><a href="https://www.horizon.tv/nl_nl/my-videos.html">my-videos NL</a></p> 
+<p><a href="https://www.horizon.tv/nl_nl.html">home NL</a></p>   
+  
 <p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943091">Live item NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F144523905/wnl-opiniemakers/crid%3A~~2F~~2Fbds.tv~~2F227612161-imi%3A00100000007C921C/wnl-opiniemakers.html">https://www.horizon.tv/nl_nl/ Replay NL</a></p>
     
@@ -121,6 +126,8 @@
 <p><a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F120673537/mein-idol-messi/crid%3A~~2F~~2Fbds.tv~~2F120673537-imi%3A0010000000BE0917/mein-idol-messi.html">https://www.horizon.tv/en_ch/ Replay CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000369333/nightcrawler-jede-nacht-hat-ihren-preis-hd/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000369333/nightcrawler-jede-nacht-hat-ihren-preis-hd.html">https://www.horizon.tv/en_ch/ VOD item CH</a></p>
 <p><a href="https://www.horizon.tv/de_de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord.html">https://www.horizon.tv/de_de/ Maxdome item DE</a></p>
+<p><a href="https://www.horizon.tv/de_de/live-sender.html">https://www.horizon.tv/de_de/watch tv DE</a></p>
+
 <p><a href="https://www.horizon.tv/de_de/maxdome/movie-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral.html">https://www.horizon.tv/de_de/ Maxdome item-2 DE</a></p>
 <p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">https://www.horizon.tv/de_de/ My prime DE/Survival of the Dead</a></p>
 
