--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 <p><a href="https://www.horizon.tv/nl_nl/ondemand.html">On demand NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids.html">tv-gids NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/my-videos.html">my-videos NL</a></p> 
+<p><a href="https://www.horizon.tv/nl_nl/tv-kijken.html">watch tv NL</a></p>   
+  
 <p><a href="https://www.horizon.tv/nl_nl.html">home NL</a></p>   
   
 <p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943091">Live item NL</a></p>
