--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <p><a href="https://www.horizon.tv/nl_nl.html">home NL</a></p>   
   
 <p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943091">Live item NL</a></p>
+<p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/watch">Live item NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F144523905/wnl-opiniemakers/crid%3A~~2F~~2Fbds.tv~~2F227612161-imi%3A00100000007C921C/wnl-opiniemakers.html">https://www.horizon.tv/nl_nl/ Replay NL</a></p>
     
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000509232/101-dalmatians-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000509232/101-dalmatians-hd.html/watch#182">https://www.horizon.tv/nl_nl/ Movie-{my-prime}/{type}/{mediagroup}/watch</a><br>
