--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl// my prime series-5season-w/o episode-w/o season-shared-NL</a></p>       
       
 <p><a href="hgo://ch/home">hgo://ch/ Home-CH</a> </p>  
+<p><a href="hgo://de/myprime">hgo://ch/ Home-CH</a> </p>  
+      https://www.horizon.tv/de_de/maxdome.html
 
 <p><a href="hgo://nl">hgo://nl without Home</a>  </p>
         
@@ -131,7 +133,7 @@
 <p><a href="https://www.horizon.tv/de_de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord.html">https://www.horizon.tv/de_de/ Maxdome item DE</a></p>
 <p><a href="https://www.horizon.tv/de_de/live-sender.html">https://www.horizon.tv/de_de/watch tv DE</a></p>
 <p><a href="https://www.horizon.tv/de_de/maxdome.html">https://www.horizon.tv/de_de/maxdome DE</a></p>
-
+<p><a href="https://www.horizon.tv/de_de/myprime.html">https://www.horizon.tv/de_de/myprime DE</a></p>
 <p><a href="https://www.horizon.tv/de_de/maxdome/movie-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral.html">https://www.horizon.tv/de_de/ Maxdome item-2 DE</a></p>
 <p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">https://www.horizon.tv/de_de/ My prime DE/Survival of the Dead</a></p>
 
