--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
   <a href="ziggogo://nl/myvideos">ziggogo://nl/ Myvideos Page</a><br>
   <a href="ziggogo://nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000257772/2033-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000257772/2033-hd">ziggogo://nl/ Myprime/film/2033</a><br>
   <a href="ziggogo://nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000065F5/Sesamstraat/crid%3A~~2F~~2Fbds.tv~~2F217769964-imi%3A00100000007B040C/Sesamstraat">ziggogo://nl/ TV item</a><br>
-</p>
-<p><a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">ziggogo://nl/ My prime/nl/Teenage Mutant Ninja Turtles</a>
-</p>
+  <a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">ziggogo://nl/ My prime/nl/Teenage Mutant Ninja Turtles</a>
+  <a href="ziggogo://nl/tv-kijken/live-channel.html/24443942983/1477646100000">ziggogo://nl/ TV guide item</a><br>
+ </p>
 <p>
   <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Wrong pages</h4>
@@ -164,7 +164,10 @@
 
 <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Deeplinking. Universal format</h4>
-
+<p>
+   <a href="https://www.ziggogo.tv/nl/my-prime.html">https://www.ziggogo.tv/nl/ my-prime Page</a><br>
+   <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
+<a href="https://www.ziggogo.tv/nl/ondemand.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
 
 
 <p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
