--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
   <a href="ziggogo://nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000257772/2033-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000257772/2033-hd">ziggogo://nl/ Myprime/film/2033</a><br>
   <a href="ziggogo://nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000065F5/Sesamstraat/crid%3A~~2F~~2Fbds.tv~~2F217769964-imi%3A00100000007B040C/Sesamstraat">ziggogo://nl/ TV item</a><br>
   <a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">ziggogo://nl/ My prime/nl/Teenage Mutant Ninja Turtles</a>
-  <a href="ziggogo://nl/tv-kijken/live-channel.html/24443942983/1477646100000">ziggogo://nl/ TV guide item</a><br>
- </p>
+    <a href="ziggogo://nl/tv-kijken/live-channel.html/24443942983/1477646100000">ziggogo://nl/ TV guide item</a><br>
+  <a href="https://www.ziggogo.tv/dl/nl/watchtv/station/24443942987/program/crid:~~2F~~2Fbds.tv~~2F198470434/listing/crid:~~2F~~2Fbds.tv~~2F229084392-imi:0010000000808F95">www.ziggogo.tv/dl/nl/ TV guide item</a><br>
+  <a href="https://www.ziggogo.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">www.ziggogo.tv/dl/nl/ My prime item show</a><br>
+  <a href="https://www.ziggogo.tv/dl/nl/myprime/group/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282/item/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282">www.ziggogo.tv/dl/nl/ My prime item</a><br>
+</p>
 <p>
   <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Wrong pages</h4>
@@ -167,7 +170,14 @@
 <p>
    <a href="https://www.ziggogo.tv/nl/my-prime.html">https://www.ziggogo.tv/nl/ my-prime Page</a><br>
    <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
-<a href="https://www.ziggogo.tv/nl/ondemand.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
+<a href="https://www.ziggogo.tv/nl/ondemand.html">https://www.ziggogo.tv/nl/ ondemand Page</a><br>
+  <a href="https://www.ziggogo.tv/nl/my-videos.html">https://www.ziggogo.tv/nl/ my-videos Page</a><br>
+  <a href="https://www.ziggogo.tv/nl.html">https://www.ziggogo.tv/nl/ home Page</a><br>
+  <a href="https://www.ziggogo.tv/nl/tv-kijken.html">https://www.ziggogo.tv/nl/ watch tv Page</a><br>
+  <a href="https://www.ziggogo.tv/nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282/broken-flowers.html">https://www.ziggogo.tv/nl/ My prime item</a><br>
+  <a href="https://www.ziggogo.tv/nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi.html">https://www.ziggogo.tv/nl/ On demand item</a><br>
+ 
+  
 
 
 <p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
