--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
   <a href="ziggogo://nl/ondemand">ziggogo://nl/ Ondemand Page</a><br>
   <a href="ziggogo://nl/myvideos">ziggogo://nl/ Myvideos Page</a><br>
    <a href="virgintv://nl/myvideos">virgintv://nl/ Myvideos Page</a><br>
+    <a href="virgintv://ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
    <a href="virgintv:///dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://nl/ myprime</a><br>
 
   
