--- a/index.html
+++ b/index.html
@@ -183,6 +183,56 @@
   <a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">ziggogo://nl/ My prime/nl/Teenage Mutant Ninja Turtles</a>
  
   
+  
+  
+  
+  
+  
+  
+  <h2>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin</h2>
+<h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Mobile Deeplinking</h4>
+
+<p>
+   <a href="virgintv://nl/home">virgintv://nl/ Home Page NL</a><br>
+  <a href="virgintv://nl/tvguide">virgintv://nl/ TV-Guide Page</a><br>
+  <a href="virgintv://nl/watchtv">virgintv://nl/ WatchTV Page</a><br>
+  <a href="virgintv://nl/myprime">virgintv://nl/ Myprime Page</a><br>
+  <a href="virgintv://nl/ondemand">virgintv://nl/ Ondemand Page</a><br>
+  <a href="virgintv://nl/myvideos">virgintv://nl/ Myvideos Page</a><br>
+   <a href="virgintv:///dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://nl/ myprime</a><br>
+
+  
+  <a href="https://preprod-www.virginmediatv.ie/dl/ie/live-channels/live-channel.html/753737255272/1482503400000">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
+  <a href="https://www.ziggogo.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">www.ziggogo.tv/dl/nl/ My prime item show</a><br>
+  <a href="https://www.ziggogo.tv/dl/nl/myprime/group/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282/item/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282">www.ziggogo.tv/dl/nl/ My prime item</a><br>
+<a href="https://www.ziggogo.tv/dl/nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501">www.ziggogo.tv/dl/nl/ My prime item movie</a><br>
+<a href="https://www.ziggogo.tv/dl/nl/ondemand/group/crid:~~2F~~2Fupc.com~~2F2c64257c-bde5-4f44-8ad7-cf8e75e97f5f/item/crid:~~2F~~2Fupc.com~~2F1010~~2FMMPK2009000000269635">ziggogo://nl/ on Demand item Page</a><br>
+
+</p>
+<p>
+  <h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Wrong pages</h4>
+  <a href="ziggogo://nl/hame">Hame Page-incorrect adress</a><br>
+  <a href="ziggogo://nl/fjg">fjg Page-incorrect adress</a><br>
+</p>
+
+<h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Deeplinking. Universal format</h4>
+<p>
+   <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets.html">https://www.virginmediatv.ie/en/ my-prime Page</a><br>
+   <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
+<a href="https://www.ziggogo.tv/nl/ondemand.html">https://www.ziggogo.tv/nl/ ondemand Page</a><br>
+  <a href="https://www.ziggogo.tv/nl/my-videos.html">https://www.ziggogo.tv/nl/ my-videos Page</a><br>
+  <a href="https://www.ziggogo.tv/nl.html">https://www.ziggogo.tv/nl/ home Page</a><br>
+  <a href="https://www.ziggogo.tv/nl/tv-kijken.html">https://www.ziggogo.tv/nl/ watch tv Page</a><br>
+  <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season.html">https://www.virginmediatv.ie/en/ movies-and-boxsets item</a><br>
+  <a href="https://www.ziggogo.tv/nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi.html">https://www.ziggogo.tv/nl/ On demand item</a><br>
+  <a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">ziggogo://nl/ My prime/nl/Teenage Mutant Ninja Turtles</a>
+  
+  
+  
 
 
 <p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
