--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Mobile Deeplinking</h4>
 
 <p>
-   <a href="virgintv://nl/home">virgintv://nl/ Home Page NL</a><br>
-  <a href="virgintv://nl/tvguide">virgintv://nl/ TV-Guide Page</a><br>
-  <a href="virgintv://nl/watchtv">virgintv://nl/ WatchTV Page</a><br>
-  <a href="virgintv://nl/myprime">virgintv://nl/ Myprime Page</a><br>
-  <a href="virgintv://nl/ondemand">virgintv://nl/ Ondemand Page</a><br>
-  <a href="virgintv://nl/myvideos">virgintv://nl/ Myvideos Page</a><br>
-   <a href="virgintv:///dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://nl/ myprime</a><br>
+   <a href="virgintv://ie/home">virgintv://nl/ Home Page NL</a><br>
+  <a href="virgintv://ie/tvguide">virgintv://nl/ TV-Guide Page</a><br>
+  <a href="virgintv://ie/watchtv">virgintv://nl/ WatchTV Page</a><br>
+  <a href="virgintv://ie/myprime">virgintv://nl/ Myprime Page</a><br>
+  <a href="virgintv://ie/ondemand">virgintv://nl/ Ondemand Page</a><br>
+  <a href="virgintv://ie/myvideos">virgintv://nl/ Myvideos Page</a><br>
+   <a href="virgintv:///dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://nl/ myprime</a><br>
 
   
   <a href="https://preprod-www.virginmediatv.ie/dl/ie/live-channels/live-channel.html/753737255272/1482503400000">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
