--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
   <a href="virgintv://ie/myprime">virgintv://nl/ Myprime Page</a><br>
   <a href="virgintv://ie/ondemand">virgintv://nl/ Ondemand Page</a><br>
   <a href="virgintv://ie/myvideos">virgintv://nl/ Myvideos Page</a><br>
+  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F4580c622-6999-44e4-abfb-ce586bad9d8f/magic-city-s01-hd">virgintv://nl/ M-S item</a><br>
+  <a href="virgintv://ie/live-channels/live-channel.html/753737255275/1483618500000">virgintv://nl/ TV guide item</a><br>
    <a href="virgintv:///dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://nl/ myprime</a><br>
 
   <a href="http://preprod-www.virginmediatv.ie/dl/ie/content/www-horizon-tv/en_ie/movies-and-boxsets/movie-asset.html/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177/tennessee">www.virginmediatv.ie/dl/ie/ item myprime</a><br>
@@ -213,16 +215,18 @@
 </p>
 <p>
   <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ziggo. Wrong pages</h4>
-  <a href="ziggogo://nl/hame">Hame Page-incorrect adress</a><br>
-  <a href="ziggogo://nl/fjg">fjg Page-incorrect adress</a><br>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Wrong pages</h4>
+  <a href="virgintv://ie/hame">Hame Page-incorrect adress</a><br>
+  <a href="virgintv://ie/wotchtv">wotchtv Page-incorrect adress</a><br>
 </p>
 
 <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Deeplinking. Universal format</h4>
 <p>
-   <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets.html">https://www.virginmediatv.ie/en/ my-prime Page</a><br>
-   <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
+   <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
+  <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F73196d75-8618-46d5-ab32-e866290d314e/ep-01-banana-in-the-stone/crid%3A~~2F~~2Fupc.com~~2F186071~~2FPACK0000000000808300/ep-01-banana-in-the-stone">M-S item</a><br>
+  <a href="https://preprod-www.virginmediatv.ie/en/live-channels/live-channel.html/753737255332/1483610400000">TV guide item</a><br>
+  <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
 <a href="https://www.ziggogo.tv/nl/ondemand.html">https://www.ziggogo.tv/nl/ ondemand Page</a><br>
   <a href="https://www.ziggogo.tv/nl/my-videos.html">https://www.ziggogo.tv/nl/ my-videos Page</a><br>
   <a href="https://www.ziggogo.tv/nl.html">https://www.ziggogo.tv/nl/ home Page</a><br>
