--- a/index.html
+++ b/index.html
@@ -223,7 +223,14 @@
 <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Deeplinking. Universal format</h4>
 <p>
-   <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
+  <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/ M-S landing page</a><br>
+  <a href="https://preprod-www.virginmediatv.ie/en">https://www.virginmediatv.ie/Home landing page</a><br>
+ <a href="https://preprod-www.virginmediatv.ie/en/live-channels">https://www.virginmediatv.ie/ Watch TV landing page</a><br>
+  <a href="https://preprod-www.virginmediatv.ie/en/tv-guide">https://www.virginmediatv.ie/ TV guide landing page</a><br>
+   <a href="https://preprod-www.virginmediatv.ie/en/ondemand">https://www.virginmediatv.ie/ On Demand landing page</a><br>
+  <a href="https://preprod-www.virginmediatv.ie/en/my-videos">https://www.virginmediatv.ie/ My videos landing page</a><br>
+  
+  <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
   <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F73196d75-8618-46d5-ab32-e866290d314e/ep-01-banana-in-the-stone/crid%3A~~2F~~2Fupc.com~~2F186071~~2FPACK0000000000808300/ep-01-banana-in-the-stone">virgintv M-S item</a><br>
   <a href="https://preprod-www.virginmediatv.ie/en/live-channels/live-channel.html/753737255332/1483610400000">virgintv TV guide item</a><br>
   <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
