--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Mobile Deeplinking</h4>
 
 <p>
-   <a href="virgintv://ie/home">virgintv://nl/ Home Page NL</a><br>
-  <a href="virgintv://ie/tvguide">virgintv://nl/ TV-Guide Page</a><br>
-  <a href="virgintv://ie/watchtv">virgintv://nl/ WatchTV Page</a><br>
-  <a href="virgintv://ie/myprime">virgintv://nl/ Myprime Page</a><br>
-  <a href="virgintv://ie/ondemand">virgintv://nl/ Ondemand Page</a><br>
-  <a href="virgintv://ie/myvideos">virgintv://nl/ Myvideos Page</a><br>
-  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F4580c622-6999-44e4-abfb-ce586bad9d8f/magic-city-s01-hd">virgintv://nl/ M-S item</a><br>
-  <a href="virgintv://ie/live-channels/live-channel.html/753737255275/1483618500000">virgintv://nl/ TV guide item</a><br>
-   <a href="virgintv://dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://nl/ myprime</a><br>
+   <a href="virgintv://ie/home">virgintv://ie/ Home Page NL</a><br>
+  <a href="virgintv://ie/tvguide">virgintv://ie/ TV-Guide Page</a><br>
+  <a href="virgintv://ie/watchtv">virgintv://ie/ WatchTV Page</a><br>
+  <a href="virgintv://ie/myprime">virgintv://ie/ Myprime Page</a><br>
+  <a href="virgintv://ie/ondemand">virgintv://ie/ Ondemand Page</a><br>
+  <a href="virgintv://ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
+  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F4580c622-6999-44e4-abfb-ce586bad9d8f/magic-city-s01-hd">virgintv://ie/ M-S item</a><br>
+  <a href="virgintv://ie/live-channels/live-channel.html/753737255275/1483618500000">virgintv://ie/ TV guide item</a><br>
+   <a href="virgintv://dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://ie/ myprime</a><br>
 
   <a href="http://preprod-www.virginmediatv.ie/dl/ie/content/www-horizon-tv/en_ie/movies-and-boxsets/movie-asset.html/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177/tennessee">www.virginmediatv.ie/dl/ie/ item myprime</a><br>
     <a href="https://preprod-www.virginmediatv.ie/dl/ie/live-channels/live-channel.html/753737255272/1482503400000">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
