--- a/index.html
+++ b/index.html
@@ -201,9 +201,14 @@
   <a href="virgintv://ie/myprime">virgintv://ie/ Myprime Page</a><br>
   <a href="virgintv://ie/ondemand">virgintv://ie/ Ondemand Page</a><br>
   <a href="virgintv://ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
-  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F4580c622-6999-44e4-abfb-ce586bad9d8f/magic-city-s01-hd">virgintv://ie/ M-S item</a><br>
-  <a href="virgintv://ie/live-channels/live-channel.html/753737255275/1483618500000">virgintv://ie/ TV guide item</a><br>
-   <a href="virgintv://dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">virgintv://ie/ myprime</a><br>
+  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F4580c622-6999-44e4-abfb-ce586bad9d8f/magic-city-s01-hd">virgintv://ie/ M-S item #1</a><br>
+  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F0c39d0e2-742a-4a67-a392-853b9057697c/ep-01/crid%3A~~2F~~2Fupc.com~~2F10201~~2FTV3LITTLECHARMERS_01_01/little-charmers">virgintv://ie/ M-S item #2</a><br>
+  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F35f9ac94-e257-4bf6-a873-bea1a768fec7/ep-01-pilot/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000388955/pilot">virgintv://ie/ M-S item #3</a><br>        
+  
+  <a href="virgintv://ie/live-channels/live-channel.html/753737255275/1483618500000">virgintv://ie/ TV guide item #1</a><br>
+  <a href="virgintv://ie/live-channels/live-channel.html/753737255272/1483675500000">virgintv://ie/ TV guide item #2</a><br>
+  <a href="virgintv://ie/ondemand/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Fdde77290-9eab-41ff-ab01-facfe4456969/ep-01/crid%3A~~2F~~2Fupc.com~~2F10201~~2FTV3STELLASAM_01_01/stella-and-sam">virgintv://ie/ On Demand item #1</a><br>
+   
 
   <a href="http://preprod-www.virginmediatv.ie/dl/ie/content/www-horizon-tv/en_ie/movies-and-boxsets/movie-asset.html/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177/tennessee">www.virginmediatv.ie/dl/ie/ item myprime</a><br>
     <a href="https://preprod-www.virginmediatv.ie/dl/ie/live-channels/live-channel.html/753737255272/1482503400000">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
