--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <a href="virgintv://ie/myprime">virgintv://ie/ Myprime Page</a><br>
   <a href="virgintv://ie/ondemand">virgintv://ie/ Ondemand Page</a><br>
   <a href="virgintv://ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
-  <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F4580c622-6999-44e4-abfb-ce586bad9d8f/magic-city-s01-hd">virgintv://ie/ M-S item #1</a><br>
+  <a href="virgintv://ie/movies-and-boxsets/tv-asset/crid%3A~~2F~~2Fupc.com~~2F4580c622-6999-44e4-abfb-ce586bad9d8f/magic-city-s01-hd">virgintv://ie/ M-S item #1</a><br>
   <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F0c39d0e2-742a-4a67-a392-853b9057697c/ep-01/crid%3A~~2F~~2Fupc.com~~2F10201~~2FTV3LITTLECHARMERS_01_01/little-charmers">virgintv://ie/ M-S item #2</a><br>
   <a href="virgintv://ie/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F35f9ac94-e257-4bf6-a873-bea1a768fec7/ep-01-pilot/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000388955/pilot">virgintv://ie/ M-S item #3</a><br>        
   
