--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   <a href="http://preprod-www.virginmediatv.ie/dl/ie/watchtv">http://preprod-www.virginmediatv.ie/dl/ie/ WatchTV Page</a><br>
   <a href="http://preprod-www.virginmediatv.ie/dl/ie/myprime">http://preprod-www.virginmediatv.ie/dl/ie/ Myprime Page</a><br>
   <a href="http://preprod-www.virginmediatv.ie/dl/ie/ondemand">http://preprod-www.virginmediatv.ie/dl/ie/ Ondemand Page</a><br>
-  <a href=http://preprod-www.virginmediatv.ie/dl/ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
+  <a href=http://preprod-www.virginmediatv.ie/dl/ie/myvideos">http://preprod-www.virginmediatv.ie/dl/ie/ Myvideos Page</a><br>
   <a href="http://preprod-www.virginmediatv.ie/dl/ie/content/www-horizon-tv/en_ie/movies-and-boxsets/movie-asset.html/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177/tennessee">www.virginmediatv.ie/dl/ie/ item myprime</a><br>
     <a href="https://preprod-www.virginmediatv.ie/dl/ie/live-channels/live-channel.html/753737255272/1482503400000">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
   <a href="https://www.ziggogo.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">www.ziggogo.tv/dl/nl/ My prime item show</a><br>
